<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".FirstFragment">

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/main_padding_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <!-- Logo and App Name Banner -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/main_top_banner_height"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="@dimen/large_item_header_layout_size"
                android:layout_height="@dimen/large_item_header_layout_size">

                <ImageView
                    android:layout_width="@dimen/main_logo_size"
                    android:layout_height="@dimen/main_logo_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Status Card -->
        <io.github.pk5ls20.tailscaled.view.LargeActionCard
            android:id="@+id/status_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/main_card_margin_vertical"
            android:theme="@style/Theme.Tailscaled.StatusCard"
            app:cardIcon="@drawable/ic_outline_not_interested"
            app:cardSubtext="@string/tap_to_start"
            app:cardText="@string/stopped" />

        <!-- Logs -->
        <io.github.pk5ls20.tailscaled.view.LargeActionLabel
            android:id="@+id/logs_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/main_label_margin_vertical"
            app:labelIcon="@drawable/ic_baseline_assignment"
            app:labelText="@string/logs" />

        <!-- Settings -->
        <io.github.pk5ls20.tailscaled.view.LargeActionLabel
            android:id="@+id/settings_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/main_label_margin_vertical"
            app:labelIcon="@drawable/ic_baseline_settings"
            app:labelText="@string/settings" />

        <!-- About -->
        <io.github.pk5ls20.tailscaled.view.LargeActionLabel
            android:id="@+id/about_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/main_label_margin_vertical"
            app:labelIcon="@drawable/ic_baseline_info"
            app:labelText="@string/about" />

    </LinearLayout>
</ScrollView>
